force-app/main/default/objects/SMS_Notification_Status__c/SMS_Notification_Status__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SMS Notification Status</description>
    <label>SMS Notification Status</label>
</CustomObject>