force-app/main/default/objects/SMS_Notification_Status__c/fields/conditions__c.field-meta.xml
<CustomField>
    <fullName>conditions__c</fullName>
    <description>possible values OR, AND,CUSTOM_lOGIC</description>
    <inlineHelpText>possible values OR, AND,CUSTOM_lOGIC</inlineHelpText>
    <label>conditions</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>