force-app/main/default/objects/SMS_Notification_Status__c/fields/Customize_Logic__c.field-meta.xml
<CustomField>
    <fullName>Customize_Logic__c</fullName>
    <description>Customize the logic for the filter conditions that you specified. For example: 1 &amp;&amp;  (2 || 3)</description>
    <inlineHelpText>Customize the logic for the filter conditions that you specified. For example: 1 &amp;&amp; (2 || 3)</inlineHelpText>
    <label>Customize Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>