force-app/main/default/objects/SMS_Notification_Status__c/fields/Diaco_SenderId__c.field-meta.xml
<CustomField>
    <fullName>Diaco_SenderId__c</fullName>
    <label>Diaco SenderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>