force-app/main/default/objects/SMS_Notification_Status__c/fields/Diaco_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Diaco_TemplateId__c</fullName>
    <label>Diaco TemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>