force-app/main/default/objects/SMS_Notification_Status__c/fields/Magic_SenderId__c.field-meta.xml
<CustomField>
    <fullName>Magic_SenderId__c</fullName>
    <label>Magic SenderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>