force-app/main/default/objects/SMS_Notification_Status__c/fields/Magic_Source__c.field-meta.xml
<CustomField>
    <fullName>Magic_Source__c</fullName>
    <label>Magic Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>