force-app/main/default/objects/SMS_Notification_Status__c/fields/Magic_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Magic_TemplateId__c</fullName>
    <label>Magic TemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>