force-app/main/default/objects/SMS_Notification_Status__c/fields/ParentId_ApiName__c.field-meta.xml
<CustomField>
    <fullName>ParentId_ApiName__c</fullName>
    <label>ParentId ApiName</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>