force-app/main/default/objects/SMS_Notification_Status__c/fields/PhoneNumber_ApiName__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber_ApiName__c</fullName>
    <label>PhoneNumber ApiName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>