force-app/main/default/objects/SMS_Notification_Status__c/fields/SMSText__c.field-meta.xml
<CustomField>
    <fullName>SMSText__c</fullName>
    <description>Text Message</description>
    <inlineHelpText>You&apos;ll ignore the Template Id when If this field is populated</inlineHelpText>
    <label>SMSText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>